--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@
 services:
   frontend:
     build: .
-    container_name: tgsoft-shop-frontend-prod
+    container_name: shop-cong-nghe
     ports:
-      - "3000:3000"
+      - "3003:3003"
     env_file:
       - .env.prod
     environment:
